deploy config react router

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://udaysharmagithub.github.io/My-Portfolio/",
   "name": "portfolio-website-01",
   "private": true,
   "version": "0.0.0",
